findbugs realated changes, mainly changing "new Integer(int)" to "Integer.valueOf(int)"
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@11453 a8845c50-7012-0410-95d3-8e1449b9b1e4